[package]
name = "graph_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
juniper = "0.15"
serde = "1.0.163"
actix-web = "4.3"
dotenv = "0.15.0"
actix-cors = "0.6"
log = "0.4.0"
env_logger = "0.9.0"
actix-web-lab = "0.19"
ssh2 = "0.9.4"
structopt = "0.3"
file-format = "0.16"
fs_extra = "1.3.0"
actix-files = "0.6.2"
bytes = "1.4.0"
async-stream = "0.3.5"
actix-multipart = "0.6.0"
futures = "0.3.28"
[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics",
]