[package]
name = "graph_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
juniper = "0.15"
serde = "1.0.163"
actix-web = {version= "4.3", features = [ "openssl" ]}
dotenv = "0.15.0"
actix-cors = "0.6"
log = "0.4.0"
env_logger = "0.9.0"
actix-web-lab = "0.19"
ssh2 = "0.9.4"
structopt = "0.3"
file-format = "0.16"
fs_extra = "1.3.0"
actix-files = "0.6.2"
bytes = "1.4.0"
async-stream = "0.3.5"
actix-multipart = "0.6.0"
futures = "0.3.28"
base64 = "0.21.2"
openssl = "0.10"
toml = "0.8.8"
toml_edit = "0.21.0"
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken="7"
bcrypt = "0.8"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "macros", "postgres", "sqlite" ] }
actix-rt = "2.9.0"


[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics",
]